<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:background="@color/purple"
    >

    <TextView
        android:id="@+id/view_auth"
        android:text="@string/reg"
        android:textColor="@color/black"
        android:textSize="32dp"
        android:fontFamily="@font/docker_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/liner"/>

    <LinearLayout
        android:id="@+id/liner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:hint="@string/name"
            android:ems="12"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="textPersonName"
            android:layout_marginVertical="20dp"
            android:textColor="@color/black"
            android:fontFamily="@font/docker_one"
            android:background="@drawable/edittext_auth_reg"
            android:cursorVisible="false"/>


        <EditText
            android:id="@+id/edit_lastname"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:hint="@string/lastname"
            android:ems="12"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="textPersonName"
            android:layout_marginVertical="20dp"
            android:textColor="@color/black"
            android:fontFamily="@font/docker_one"
            android:background="@drawable/edittext_auth_reg"
            android:cursorVisible="false"/>

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:hint="@string/phone"
            android:ems="12"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="textPersonName"
            android:layout_marginVertical="20dp"
            android:textColor="@color/black"
            android:fontFamily="@font/docker_one"
            android:background="@drawable/edittext_auth_reg"
            android:cursorVisible="false"/>



        <EditText
            android:id="@+id/edit_password"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:ems="12"
            android:hint="@string/password"
            android:layout_marginVertical="20dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/edittext_auth_reg"
            android:fontFamily="@font/docker_one"
            android:cursorVisible="false"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_auth"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/button_auth"
            android:fontFamily="@font/docker_one"
            android:onClick="onReg"
            android:text="@string/regist"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/liner"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onBack"
            android:text="@string/back"
            android:layout_gravity="center"
            android:fontFamily="@font/docker_one"
            android:layout_marginTop="50dp"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>